# isgt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_android.sh  run.sh  start_nvim_project.sh
android/com.igrmm.isgt/app/: build.gradle
android/com.igrmm.isgt/app/jni/: mkapk.sh
android/com.igrmm.isgt/app/jni/src/: Android.mk  CMakeLists.txt
android/com.igrmm.isgt/app/src/main/: AndroidManifest.xml
android/com.igrmm.isgt/app/src/main/java/com/igrmm/isgt/: isgtActivity.java
src/: main.c  txt.c  txt.h
